fix: fix wrapping long messages

--- a/public/style.css
+++ b/public/style.css
@@ -37,6 +37,7 @@ video {
     background-color: #242324;
     border-left: 1px solid #3D3D42;
     flex: 0.2;
+    overflow-wrap: anywhere;
 }
 
 .main__videos {
@@ -106,12 +107,15 @@ video {
 }
 
 .messages {
+    padding: 20px 20px 0 20px;
+    font-size: 0.9rem;
     color: #f5f5f5;
     list-style: none;
 }
 
 li {
-    padding: 2px;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .unmute, .stop {
